--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,22 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Functional Suite</th></tr>
-<tr><td><a href="#t0">Login Test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">28,032</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Validate Title</a></td><td class="num">0</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">10,519</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">1</th><th class="num attn">1</th><th class="num attn">2</th><th class="num">38,551</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">11,785</td><td>functional</td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Validate Title</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">6,644</td><td>functional</td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">18,429</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNG.TestCase1</td><td><a href="#m0">ValidateTitle</a></td><td rowspan="1">1556211061179</td><td rowspan="1">41</td></tr><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestNG.TestCase1</td><td><a href="#m1">doLogin</a></td><td rowspan="1">1556211033723</td><td rowspan="1">27450</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Validate Title &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNG.TestCase2</td><td><a href="#m2">doLogin</a></td><td rowspan="1">1556211062271</td><td rowspan="1">10491</td></tr><tr><th colspan="4">Validate Title &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">TestNG.TestCase2</td><td><a href="#m3">ValidateTitle</a></td><td rowspan="1">1556211072787</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestNG.TestCase1</td><td><a href="#m0">ValidateTitle</a></td><td rowspan="1">1556553768212</td><td rowspan="1">20</td></tr><tr class="passedeven"><td><a href="#m1">doLogin</a></td><td rowspan="1">1556553758646</td><td rowspan="1">9562</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Validate Title &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestNG.TestCase2</td><td><a href="#m2">doLogin</a></td><td rowspan="1">1556553770462</td><td rowspan="1">6625</td></tr></tbody>
 </table>
-<h2>Login Test</h2><h3 id="m0">TestNG.TestCase1#ValidateTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Sign in – Google accounts1] but found [Sign in – Google accounts]
-	at TestNG.TestCase1.ValidateTitle(TestCase1.java:30)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">TestNG.TestCase1#ValidateTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">TestNG.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validate Title</h2><h3 id="m2">TestNG.TestCase2#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: user not logged in successfully
-	at TestNG.TestCase2.doLogin(TestCase2.java:19)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestNG.TestCase2#ValidateTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase2.ValidateTitle()[pri:2, instance:TestNG.TestCase2@6500df86] depends on not successfully finished methods
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Validate Title</h2><h3 id="m2">TestNG.TestCase2#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
