--- a/test-output/old/Functional Suite/classes.html
+++ b/test-output/old/Functional Suite/classes.html
@@ -12,11 +12,13 @@
 <tr>
 <td>&nbsp;</td>
 <td>doLogin</td>
-<td>&nbsp;</td></tr>
+<td>functional </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>ValidateTitle</td>
-<td>&nbsp;</td></tr>
+<td>functional smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -38,11 +40,13 @@
 <tr>
 <td>&nbsp;</td>
 <td>doLogin</td>
-<td>&nbsp;</td></tr>
+<td>functional smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>ValidateTitle</td>
-<td>&nbsp;</td></tr>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
