--- a/test-output/old/Functional Suite/groups.html
+++ b/test-output/old/Functional Suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>TestCase1.ValidateTitle()[pri:2, instance:TestNG.TestCase1@6a41eaa2]<br/>TestCase1.doLogin()[pri:1, instance:TestNG.TestCase1@6a41eaa2]<br/>TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@73ad2d6]<br/></td></tr>
-<tr><td>smoke</td><td>TestCase1.ValidateTitle()[pri:2, instance:TestNG.TestCase1@6a41eaa2]<br/>TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@73ad2d6]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>TestCase1.ValidateTitle()[pri:2, instance:TestNG.TestCase1@6a41eaa2]<br/>TestCase1.doLogin()[pri:1, instance:TestNG.TestCase1@6a41eaa2]<br/>TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@2f686d1f]<br/></td></tr>
+<tr><td>smoke</td><td>TestCase1.ValidateTitle()[pri:2, instance:TestNG.TestCase1@6a41eaa2]<br/>TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@2f686d1f]<br/>TestCase2.ValidateTitle()[pri:2, instance:TestNG.TestCase2@2f686d1f]<br/></td></tr>
 </table>
