--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,27 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Functional Suite</th></tr>
-<tr><td><a href="#t0">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">11,785</td><td>functional</td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Validate Title</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">6,644</td><td>functional</td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">18,429</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">6,422</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Validate Title</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">4,330</td><td></td><td></td></tr>
+<tr><td><a href="#t2">failing Testcase</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">10</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">3</th><th class="num">10,762</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestNG.TestCase1</td><td><a href="#m0">ValidateTitle</a></td><td rowspan="1">1556553768212</td><td rowspan="1">20</td></tr><tr class="passedeven"><td><a href="#m1">doLogin</a></td><td rowspan="1">1556553758646</td><td rowspan="1">9562</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Validate Title &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestNG.TestCase2</td><td><a href="#m2">doLogin</a></td><td rowspan="1">1556553770462</td><td rowspan="1">6625</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNG.TestCase1</td><td><a href="#m0">ValidateTitle</a></td><td rowspan="1">1556727048502</td><td rowspan="1">27</td></tr><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestNG.TestCase1</td><td><a href="#m1">doLogin</a></td><td rowspan="1">1556727042382</td><td rowspan="1">6103</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Validate Title &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNG.TestCase2</td><td><a href="#m2">ValidateTitle</a></td><td rowspan="1">1556727053150</td><td rowspan="1">57</td></tr><tr><th colspan="4">Validate Title &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestNG.TestCase2</td><td><a href="#m3">doLogin</a></td><td rowspan="1">1556727048880</td><td rowspan="1">4267</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">failing Testcase &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNG.TestFailure</td><td><a href="#m4">doLogin</a></td><td rowspan="1">1556727053304</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Login Test</h2><h3 id="m0">TestNG.TestCase1#ValidateTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">TestNG.TestCase1#ValidateTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Sign in – Google accounts] but found [accounts.google.com]
+	at TestNG.TestCase1.ValidateTitle(TestCase1.java:30)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">TestNG.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validate Title</h2><h3 id="m2">TestNG.TestCase2#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Validate Title</h2><h3 id="m2">TestNG.TestCase2#ValidateTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Sign in – Google accounts] but found [accounts.google.com]
+	at TestNG.TestCase2.ValidateTitle(TestCase2.java:33)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestNG.TestCase2#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>failing Testcase</h2><h3 id="m4">TestNG.TestFailure#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failing the login test
+	at TestNG.TestFailure.doLogin(TestFailure.java:9)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
