--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCase2</td>
+<td>TestNG.TestCase2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,11 +12,13 @@
 <tr>
 <td>&nbsp;</td>
 <td>doLogin</td>
-<td>&nbsp;</td></tr>
+<td>functional smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>ValidateTitle</td>
-<td>&nbsp;</td></tr>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
