--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74b285">  <td>19/04/25 22:10:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.doLogin()[pri:1, instance:TestCase2@3532ec19]">doLogin</td> 
-  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>19/05/01 21:15:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.ValidateTitle()[pri:2, instance:TestNG.TestCase2@27efef64]">ValidateTitle</td> 
+  <td>main@343965883</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>19/05/01 21:15:08</td>   <td>-6458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@27efef64]">doLogin</td> 
+  <td>main@343965883</td>   <td></td> </tr>
 </table>
