--- a/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>19/04/29 21:32:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.ValidateTitle()[pri:2, instance:TestNG.TestCase1@6a41eaa2]">ValidateTitle</td> 
-  <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/04/29 21:32:48</td>   <td>25</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeee()[pri:0, instance:TestNG.TestCase1@6a41eaa2]">&lt;&lt;closeee</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/04/29 21:32:38</td>   <td>-9566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:1, instance:TestNG.TestCase1@6a41eaa2]">doLogin</td> 
-  <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="f777e8">  <td>19/04/29 21:32:50</td>   <td>2250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@73ad2d6]">doLogin</td> 
-  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/05/01 21:40:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.ValidateTitle()[pri:2, instance:TestNG.TestCase1@6a41eaa2]">ValidateTitle</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>19/05/01 21:40:53</td>   <td>4648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.ValidateTitle()[pri:2, instance:TestNG.TestCase2@2f686d1f]">ValidateTitle</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/05/01 21:40:48</td>   <td>32</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeee()[pri:0, instance:TestNG.TestCase1@6a41eaa2]">&lt;&lt;closeee</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/05/01 21:40:42</td>   <td>-6120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:1, instance:TestNG.TestCase1@6a41eaa2]">doLogin</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>19/05/01 21:40:48</td>   <td>378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.doLogin()[pri:1, instance:TestNG.TestCase2@2f686d1f]">doLogin</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>19/05/01 21:40:53</td>   <td>4802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:TestNG.TestFailure@3f49dace]">doLogin</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/05/01 21:40:53</td>   <td>4877</td> <td title="&lt;&lt;BaseTest.quit()[pri:0, instance:TestNG.TestFailure@3f49dace]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/05/01 21:40:42</td>   <td>-6161</td> <td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestNG.TestFailure@3f49dace]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
 </table>
