--- a/test-output/old/Functional Suite/toc.html
+++ b/test-output/old/Functional Suite/toc.html
@@ -8,30 +8,38 @@
 <h3><p align="center">Results for<br/><em>Functional Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
-<td>3 methods:<br/>
+<td>3 tests</td>
+<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
+<td>5 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (1)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>2 groups</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login Test (2/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Login Test (1/1/0)</td><td valign='top' align='right'>
   <a href='Login Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Validate Title (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Validate Title (1/1/0)</td><td valign='top' align='right'>
   <a href='Validate Title.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>failing Testcase (0/1/0)</td><td valign='top' align='right'>
+  <a href='failing Testcase.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
